escuela/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aramirez
  labels: 
    tipo: "desarrollo"
