escuela/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-np
  labels:
    app: escuela
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30001
    protocol: TCP
  selector:
    app: escuela
