escuela/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
  - host: app.aramirez.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-np
            port:
              number: 80
